src/objects/Utility_Account_Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Cost_Future_Rollup__c</fullName>
        <inlineHelpText>This is a rollup of all approved subscription orders</inlineHelpText>
        <label>Annual Cost (Future)</label>
        <summarizedField>Subscription_Order__c.Change_in_Annual_Cost__c</summarizedField>
        <summaryFilterItems>
            <field>Subscription_Order__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription_Order__c.Utility_Account_Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_Cost_of_Electricity_Current__c</fullName>
        <description>Used in SREC contracts. This is based off of the NMC value on the Opportunity. It shows how many dollars are included in the Current Customer Subscription kW DC.</description>
        <formula>Customer_Subscription_KW_DC_STATIC__c * 
IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,

Shared_Solar_System__r.Expected_Yield_kWh_kW__c* Shared_Solar_System__r.NMC_Value__c,

Opportunity__r.Shared_Solar_System__r.Expected_Yield_kWh_kW__c* Opportunity__r.Shared_Solar_System__r.NMC_Value__c
)</formula>
        <inlineHelpText>Used in SREC contracts. This is based off of the NMC value on the Opportunity. It shows how many dollars are included in the Current Customer Subscription kW DC.</inlineHelpText>
        <label>Annual Cost of Electricity (Current)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Cost_of_Electricity__c</fullName>
        <description>Total cost of electricity at the UAL level.</description>
        <label>Full Annual Cost of Electricity</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Annual_Subscription_Production_Summary__c</fullName>
        <description>Sum of the last 12 months of UASB Subscription Production (kWh) for Anchor &amp; Public Offtake customers serviced by BlueWave</description>
        <inlineHelpText>Sum of the last 12 months of UASB Subscription Production (kWh) for Anchor &amp; Public Offtake customers serviced by BlueWave</inlineHelpText>
        <label>Annual Subscription Production Summary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_kWh_Subscription_Current__c</fullName>
        <description>Used in SMART contracts. It is the kWh equivalent of the Annual Cost of Electricity (Current) field. It shows how many kWhs are included in the Current Customer Subscription kW DC.</description>
        <formula>IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,

Shared_Solar_System__r.Expected_Yield_kWh_kW__c,

Opportunity__r.Shared_Solar_System__r.Expected_Yield_kWh_kW__c
)*Customer_Subscription_KW_DC_STATIC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in SMART contracts. It is the kWh equivalent of the Annual Cost of Electricity (Current) field. It shows how many kWhs are included in the Current Customer Subscription kW DC.</inlineHelpText>
        <label>Annual kWh Subscription (Current)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_kWh_Subscription_Future_Rollup__c</fullName>
        <inlineHelpText>This is a rollup of all approved subscription orders.</inlineHelpText>
        <label>Annual kWh Subscription (Future)</label>
        <summarizedField>Subscription_Order__c.Change_in_Annual_kWh__c</summarizedField>
        <summaryFilterItems>
            <field>Subscription_Order__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription_Order__c.Utility_Account_Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annual_kwh_subscription_future__c</fullName>
        <description>Used for SMART CS contracts. It is the counterpart to annual cost of electricity field, and is used to calculate the future customer subscription kW DC field for Opportunities with the SMART CS contract. It is populated manually.</description>
        <inlineHelpText>Used for SMART CS contracts. It is the counterpart to annual cost of electricity field, and is used to calculate the future customer subscription kW DC field for Opportunities with the SMART CS contract. It is populated manually.</inlineHelpText>
        <label>xxAnnual kWh Subscription (Future)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Auto_Unround__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auto Unround</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Calculated_Customer_Subscription_kW_DC__c</fullName>
        <formula>Calculated_NMC_Alloaction_kWh__c / 
IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,
Shared_Solar_System__r.Expected_Yield_kWh_kW__c,
Opportunity__r.Shared_Solar_System__r.Expected_Yield_kWh_kW__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Customer Subscription (kW DC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Calculated_NMC_Alloaction_kWh__c</fullName>
        <formula>calculated_annual_cost_of_electricity__c / Opportunity__r.NMC_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated NMC Alloaction (kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commission_Structure_Description__c</fullName>
        <formula>IF( ISBLANK(Opportunity__r.Commission_Structure__c), &apos;Not yet invoiced&apos;,
Opportunity__r.Commission_Structure__r.Name &amp; &quot; - &quot; &amp; 
IF(Opportunity__r.Commission_Structure__r.Cents_kW_DC_Up_Front__c &gt; 0,
&apos;0&apos; &amp; TEXT(Opportunity__r.Commission_Structure__r.Cents_kW_DC_Up_Front__c) &amp; &quot; _ &quot; ,&apos;&apos;)
&amp;
IF(Opportunity__r.Commission_Structure__r.Cents_kW_DC_First_Bill__c &gt; 0,
&apos;0&apos; &amp; TEXT(Opportunity__r.Commission_Structure__r.Cents_kW_DC_First_Bill__c) &amp; &quot; _ &quot;, &apos;&apos;)
&amp;
IF(Opportunity__r.Commission_Structure__r.Cents_kW_DC_First_Bill_Paid__c &gt; 0, 
&apos;0&apos; &amp; TEXT(Opportunity__r.Commission_Structure__r.Cents_kW_DC_First_Bill_Paid__c), &apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used in Conga Partner Summary Doc</inlineHelpText>
        <label>Commission Structure Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_Current_Share__c</fullName>
        <formula>Share_of_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Current Share (share/100)</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conga_Future_Share__c</fullName>
        <formula>IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true
,
Future_Share_of_System_Rollup__c
,
Future_Share_of_System__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga Future Share (share/100)</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Deactive_Schedule_Zs__c</fullName>
        <label>Count of Deactivated Allocation Schs</label>
        <summaryFilterItems>
            <field>Schedule_Z_Subscription__c.Deactivated__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Schedule_Z_Subscription__c.Utility_Account_Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Count_of_Submitted_Schedule_Zs__c</fullName>
        <label>Count of Submitted Allocation Schedules</label>
        <summaryFilterItems>
            <field>Schedule_Z_Subscription__c.Submitted__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Schedule_Z_Subscription__c.Utility_Account_Subscription__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Schedule_Z_Status__c</fullName>
        <formula>IF(Total_Count_of_Schedule_Zs__c = 0, &quot;Not Yet Enacted&quot;, IF((Count_of_Deactive_Schedule_Zs__c = Total_Count_of_Schedule_Zs__c), &quot;Cancelled&quot; , &quot;Enacted&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated by the number of Allocation Schedule Subscriptions that are enacted or not enacted</inlineHelpText>
        <label>Current Allocation Schedule Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Deduction_Order__c</fullName>
        <label>Custom Deduction Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Group__c</fullName>
        <formula>Text(Opportunity__r.Customer_Group__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Subscription_KW_DC_STATIC__c</fullName>
        <description>Customer Subscription value at point of sale. This field is not dynamic and is populated based on a workflow.</description>
        <inlineHelpText>Used for billing. Populated when Opportunity Stage Name is Pending BW Signature through a process builder. Once the Opp stage is set to Complete the Opp then aggregates this instead of the dynamic.</inlineHelpText>
        <label>XXCurrent Customer Subscription (kW DC)</label>
        <precision>9</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Subscription_KW_DC__c</fullName>
        <description>Made the system name logic so that Allocation Schedule customers will not change to unrounded values</description>
        <formula>IF(

$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true
,
Future_Customer_Subscription_KWDC_Rollup__c
,

IF(AND(TEXT(Opportunity__r.Product__r.Customer_Subscription_Type__c)=&apos;kWh&apos;,Annual_kwh_subscription_future__c&gt;0),Annual_kwh_subscription_future__c/Opportunity__r.Shared_Solar_System__r.Expected_Yield_kWh_kW__c, 
IF( UAS_Number__c &gt; 1 , 

Subscribed_Annual_Cost_of_Electricity__c / Opportunity__r.NMC_Value__c / Opportunity__r.Shared_Solar_System__r.Expected_Yield_kWh_kW__c, 

IF( 

OR(Auto_Unround__c = TRUE , AND(UAS_Number__c = 1 , calculated_annual_cost_of_electricity__c != Subscribed_Annual_Cost_of_Electricity__c )), 

Subscribed_Annual_Cost_of_Electricity__c / Opportunity__r.NMC_Value__c/ Opportunity__r.Shared_Solar_System__r.Expected_Yield_kWh_kW__c, 


IF( 

OR(AND(UAS_Number__c = 1 , calculated_annual_cost_of_electricity__c = Subscribed_Annual_Cost_of_Electricity__c ), Opportunity__r.Shared_Solar_System_Name__c = &apos;Fairhaven Mill Rd&apos;, Opportunity__r.Shared_Solar_System_Name__c = &apos;Oxford Clara Barton&apos;), 

Round(( Subscribed_Annual_Cost_of_Electricity__c / Opportunity__r.NMC_Value__c/ Opportunity__r.Shared_Solar_System__r.Expected_Yield_kWh_kW__c) * 4, 0)/4,0))))
)</formula>
        <inlineHelpText>Dynamic Subscription</inlineHelpText>
        <label>Future Customer Subscription (KW DC)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Client_Invoice_Sent__c</fullName>
        <description>This is the date the invoice that includes this UAS was sent to the Client. It is populated manually by Operations.</description>
        <inlineHelpText>This is the date the invoice that includes this UAS was sent to the Client. It is populated manually by Operations.</inlineHelpText>
        <label>Date Client Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Removed_from_Project__c</fullName>
        <inlineHelpText>Populated with Date Allocation Schedule Retired by Utility when &quot;Date Allocation Schedule Retired by Utility&quot; on all related Allocation Schedule Subscriptions is populated AND Date Utility Account Cancelled is NOT populated</inlineHelpText>
        <label>Date Removed from Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Early_Removal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>NG MA has recently allowed us to remove (not replace) subscribers without filing a new AS through a one time request. For these customers, we will need a way to stop billing it in a similar manner as finalled accounts, without using the finalled account process. It also needs to be at the subscription level, since in some situations, we may only remove a single subscription.</description>
        <inlineHelpText>Check after an early removal is accepted by National Grid MA, or if a subscription is rejected by any utility due to ineligibility, but the rest of the ALS is accepted. We will need to populate the date removed from project and allow Stop Credit Transfer on the ALSS to be checked when subscription is done billing.</inlineHelpText>
        <label>Early Removal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Entity_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity Assignment</label>
        <referenceTo>Entity__c</referenceTo>
        <relationshipLabel>Utility Account Subscriptions</relationshipLabel>
        <relationshipName>Utility_Account_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Subscription_kWh__c</fullName>
        <description>This is displayed to customers in the customer portal.</description>
        <formula>IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true
,
Future_Customer_Subscription_KWDC_Rollup__c
,
Customer_Subscription_KW_DC__c
)
 *  
IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true
,
 Shared_Solar_System__r.Expected_Yield_kWh_kW__c
,
Opportunity__r.Shared_Solar_System__r.Expected_Yield_kWh_kW__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is displayed to customers in the customer portal.</inlineHelpText>
        <label>Estimated Annual Subscription (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Externally_Serviced_Override__c</fullName>
        <description>Sets UAS to Externally/Internally Serviced</description>
        <label>Externally Serviced Override</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Externally Serviced</fullName>
                </value>
                <value>
                    <fullName>Internally Serviced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Externally_Serviced__c</fullName>
        <formula>IF (  
 ISPICKVAL( Externally_Serviced_Override__c , &quot;&quot;),

IF (  
 AND( 
  OR (
    ISPICKVAL(Opportunity__r.Customer_Sub_Group__c, &quot;Public Offtake&quot;),
    ISPICKVAL(Opportunity__r.Customer_Group__c, &quot;Anchor&quot;)
  ),
   
   IF(
     $CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,
      AND(
       NOT(ISPICKVAL(Shared_Solar_System__r.Billing_Anchors__c, &quot;&quot;)),
       NOT(ISPICKVAL(Shared_Solar_System__r.Billing_Anchors__c, &quot;BlueWave&quot;))
          ),

   AND(
    NOT(ISPICKVAL(Opportunity__r.Shared_Solar_System__r.Billing_Anchors__c, &quot;&quot;)),
    NOT(ISPICKVAL(Opportunity__r.Shared_Solar_System__r.Billing_Anchors__c, &quot;BlueWave&quot;))
  )
      )
 ),
TRUE, FALSE),

IF (
 ISPICKVAL( Externally_Serviced_Override__c , &quot;Externally Serviced&quot;), true, false)

)</formula>
        <inlineHelpText>Checked if subscription is billed by RadianGen</inlineHelpText>
        <label>Externally Serviced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finaled__c</fullName>
        <formula>NOT(ISBLANK( Utility_Account_Log__r.Date_Utility_Account_Cancelled__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Checked if the Utility Account Log has a Date Utility Account Cancelled, indicating that the utility finaled this utiltiy account.</inlineHelpText>
        <label>Finaled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Anticipated_NMC_Allocation_kWh__c</fullName>
        <formula>Annual_Cost_of_Electricity__c / Opportunity__r.NMC_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Anticipated NMC Allocation (kWh)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Customer_Subscription_KWDC_Rollup__c</fullName>
        <inlineHelpText>This is a rollup of all approved subscription orders.</inlineHelpText>
        <label>Future Customer Subscription (KW DC)</label>
        <summarizedField>Subscription_Order__c.Approved_Change_in_Subscription__c</summarizedField>
        <summaryFilterItems>
            <field>Subscription_Order__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription_Order__c.Utility_Account_Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Future_Share_of_System_Rollup__c</fullName>
        <inlineHelpText>This is a rollup of all approved subscription orders</inlineHelpText>
        <label>Future Share of System</label>
        <summarizedField>Subscription_Order__c.Approved_Change_in_Percent_Share__c</summarizedField>
        <summaryFilterItems>
            <field>Subscription_Order__c.Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Subscription_Order__c.Utility_Account_Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Future_Share_of_System__c</fullName>
        <formula>IF(
 $CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true
,
 Future_Share_of_System_Rollup__c
,
ROUND(Customer_Subscription_KW_DC__c/ Opportunity__r.Shared_Solar_System__r.Total_System_Size_kWh_DC__c, Opportunity__r.Shared_Solar_System__r.Utility__r.Number_of_Decimal_Places__c + 2)

)</formula>
        <label>Future Share of System</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Account_Bill_Number__c</fullName>
        <formula>Opportunity__r.Account.Max_Account_Bill_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Account Bill Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Subscription_Capacity__c</fullName>
        <formula>IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,
Shared_Solar_System__r.Maximum_Subscription_Capacity_kWDC__c,
Opportunity__r.Shared_Solar_System__r.Maximum_Subscription_Capacity_kWDC__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Subscription Capacity (kW DC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Annual_Cost__c</fullName>
        <formula>Maximum_NMC_Allocation__c * Opportunity__r.NMC_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Annual Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Annual_kWh__c</fullName>
        <description>This is the maximum annual kwh that can be put on a single UAS. It is driven by the Maximum Subscription Capacity on the SSS and the UAS&apos;s applied Sizing Method.</description>
        <formula>IF(
AND($CustomMetadata.Custom_Feature_Enablement__mdt.Sizing_Method.Feature_is_Enabled__c, NOT(ISBLANK(Sizing_Method__c)), Sizing_Method__r.Size_Ratio__c &gt; 0),
Shared_Solar_System__r.Maximum_Subscription_Capacity_kWDC__c * Shared_Solar_System__r.Expected_Yield_kWh_kW__c / Sizing_Method__r.Size_Ratio__c,
Shared_Solar_System__r.Expected_Yield_kWh_kW__c * Shared_Solar_System__r.Maximum_Subscription_Capacity_kWDC__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the maximum annual kwh that can be put on a single UAS. It is driven by the Maximum Subscription Capacity on the SSS and the UAS&apos;s applied Sizing Method.</inlineHelpText>
        <label>Maximum Annual kWh</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_NMC_Allocation__c</fullName>
        <formula>Max_Subscription_Capacity__c * 
IF(
 $CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,
  Shared_Solar_System__r.Expected_Yield_kWh_kW__c,
  Opportunity__r.Shared_Solar_System__r.Expected_Yield_kWh_kW__c
  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum NMC Allocation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Enacted_ALSS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The last filing with the utility that this customer had. Stamped with the most recently enacted allocation schedule subscription. If customer drops off all allocation schedules, this field does not clear, so that it can be used for cancellation reporting.</inlineHelpText>
        <label>Most Recent Enacted ALSS</label>
        <referenceTo>Schedule_Z_Subscription__c</referenceTo>
        <relationshipLabel>Utility Account Subscriptions</relationshipLabel>
        <relationshipName>Utility_Account_Subscriptions_MostRecent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_on_Account_From_Log__c</fullName>
        <formula>Utility_Account_Log__r.Name_on_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name on Utility Account (From Log)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_on_Account__c</fullName>
        <description>Customer&apos;s name on their electric bill</description>
        <label>Name on Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Metering_Credit_Rate__c</fullName>
        <description>Net Metering Credit Rate at the point of sale.</description>
        <label>Net Metering Credit Rate</label>
        <precision>9</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_Schedule_Z_Status__c</fullName>
        <defaultValue>&quot;Active Subscription&quot;</defaultValue>
        <inlineHelpText>Controls whether this subscription should be added to future Allocation Schedules. Select &apos;Active Subscription&apos; to include it, or &apos;Inactive Subscription&apos; to exclude it.</inlineHelpText>
        <label>Next Allocation Schedule Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active Subscription</fullName>
                    <default>true</default>
                    <label>Active Subscription</label>
                </value>
                <value>
                    <fullName>Inactive Subscription</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>Text(Opportunity__r.StageName)</formula>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Utility Account Subscriptions</relationshipLabel>
        <relationshipName>Utility_Account_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id__c</fullName>
        <description>Used by the UAS Lookup flow on Cases</description>
        <formula>Utility_Account_Log__r.Account__r.Parent_Account_ID__c</formula>
        <label>Parent Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <label>Partner</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Co_Assignment_Date__c</fullName>
        <label>Project Co Assignment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Company__c</fullName>
        <label>XXXX Project Company</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fairhaven Mill Rd: BWC Origination Fairhaven One, LLC</fullName>
                </value>
                <value>
                    <fullName>Hopedale S Main St: BWC Origination 19 LLC</fullName>
                </value>
                <value>
                    <fullName>Mendon Milford St: BWC Mystic River, LLC</fullName>
                </value>
                <value>
                    <fullName>Mendon Providence, Thayer and Bates : BWC Wading River, LLC</fullName>
                </value>
                <value>
                    <fullName>Oxford Barrett P1: BWC Stillwater River, LLC</fullName>
                </value>
                <value>
                    <fullName>Oxford Barrett P2: BWC French River, LLC</fullName>
                </value>
                <value>
                    <fullName>Oxford Clara Barton: BWC Fivemile River, LLC</fullName>
                </value>
                <value>
                    <fullName>Plympton: BWC Bluefish River, LLC</fullName>
                </value>
                <value>
                    <fullName>Sturbridge Hare Rd: BWC Originations 8 LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason_for_Cancellation__c</fullName>
        <inlineHelpText>Moved to the Property Account, so cancellation reasons can be easily managed and viewed for multi-subscription accounts.</inlineHelpText>
        <label>XXXReason for Cancellation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lack of Payment</fullName>
                </value>
                <value>
                    <fullName>Utility Account Cancelled</fullName>
                </value>
                <value>
                    <fullName>Customer Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSS_Id__c</fullName>
        <formula>IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,
Shared_Solar_System__c,
Opportunity__r.Shared_Solar_System__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSS Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Person__c</fullName>
        <formula>Opportunity__r.BS_Sales_ID__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Person</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Address_From_Log__c</fullName>
        <formula>Utility_Account_Log__r.Service_Address__c &amp; Utility_Account_Log__r.Service_Apt_Suite__c &amp;&quot;, &quot;&amp; Utility_Account_Log__r.Service_City__c &amp;&quot; &quot;&amp; Utility_Account_Log__r.Service_State__c &amp;&quot; &quot;&amp;  Utility_Account_Log__r.Service_Zip_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Equals Utility Account Log Service Address</inlineHelpText>
        <label>Service Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_of_System__c</fullName>
        <formula>Customer_Subscription_KW_DC_STATIC__c /  Opportunity__r.Shared_Solar_System__r.Total_System_Size_kWh_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Share of System</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Shared_Solar_System_Name__c</fullName>
        <formula>IF(
$CustomMetadata.Custom_Feature_Enablement__mdt.Subscription_Orders.Feature_is_Enabled__c=true,
Shared_Solar_System__r.Name,
Opportunity__r.Shared_Solar_System_Name__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shared Solar System Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shared_Solar_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the SSS on the Opportunity when the UAS was created. The SSS on an existing UAS should never be changed.</description>
        <inlineHelpText>This is the SSS on the Opportunity when the UAS was created. The SSS on an existing UAS should never be changed.</inlineHelpText>
        <label>Shared Solar System</label>
        <referenceTo>Shared_Solar_System__c</referenceTo>
        <relationshipLabel>Utility Account Subscriptions</relationshipLabel>
        <relationshipName>Utility_Account_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sizing_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sizing Method with either NMC Value or Size Ratio to be used in calculating subscriptions</description>
        <inlineHelpText>Sizing Method with either NMC Value or Size Ratio to be used in calculating subscriptions. If you need to change the Sizing Method, log a new Subscription Order via button.</inlineHelpText>
        <label>Sizing Method</label>
        <referenceTo>Utility_NMC_Tariff__c</referenceTo>
        <relationshipLabel>Utility Account Subscriptions</relationshipLabel>
        <relationshipName>Utility_Account_Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sizing_Ratio__c</fullName>
        <description>If the subscription type is &quot;kWh&quot;, it retrieves the &apos;Size Ratio&apos; from the related sizing method.

If the subscription type is &quot;Electricity Cost ($)&quot;, it retrieves the &apos;Value of Net Metering Credit&apos; from the related sizing method.</description>
        <formula>IF(ISNULL(Sizing_Method__c), null,
IF(ISBLANK(Subscription_Type__c), null,
IF(Subscription_Type__c = &quot;kWh&quot;, Sizing_Method__r.Size_Ratio__c,
IF(Subscription_Type__c = &quot;Electricity Cost ($)&quot;, Sizing_Method__r.Value_of_Net_Metering_Credit__c,
null))))</formula>
        <inlineHelpText>If the subscription type is &quot;kWh&quot;, it retrieves the &apos;Size Ratio&apos; from the related sizing method.

If the subscription type is &quot;Electricity Cost ($)&quot;, it retrieves the &apos;Value of Net Metering Credit&apos; from the related sizing method.</inlineHelpText>
        <label>Sizing Ratio</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>This is displayed in the customer portal as a way of showing the status of a customer&apos;s subscription using a combination of Current Allocation Schedule Status, Next Allocation Schedule Status, and Date Removed</description>
        <formula>IF(
 ISBLANK(Date_Removed_from_Project__c)=false,
&quot;Inactive&quot;,

IF(

  ISPICKVAL(Next_Schedule_Z_Status__c,&quot;Active Subscription&quot;)
&amp;&amp;
 Current_Schedule_Z_Status__c=&quot;Not Yet Enacted&quot;,
&quot;Coming Soon&quot;,

IF(
  ISPICKVAL(Next_Schedule_Z_Status__c,&quot;Active Subscription&quot;)
&amp;&amp;
 Current_Schedule_Z_Status__c=&quot;Enacted&quot;,
&quot;Active&quot;,

IF(
  ISPICKVAL(Next_Schedule_Z_Status__c,&quot;Inactive Subscription&quot;)
&amp;&amp;
 Current_Schedule_Z_Status__c=&quot;Enacted&quot;,
&quot;Pending Removal&quot;,&quot;&quot;)


)
)
)</formula>
        <inlineHelpText>This is displayed in the customer portal as a way of showing the status of a customer&apos;s subscription using a combination of Current Allocation Schedule Status, Next Allocation Schedule Status, and Date Removed</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
</CustomObject>